--- a/register/templates/players/player_detail.html
+++ b/register/templates/players/player_detail.html
@@ -2,12 +2,12 @@
 
 {% block content %}
     <div class="date">
-    {% if player.created.date %}
+    {% if player.created_date %}
         {{ player.created_date }}
     {% endif %}
-        {{ player.created_date }}
     <a class="btn btn-default" href="{% url 'player_edit' pk=player.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     </div>
+    <div>
         <h1>{{ player.first_name }} {{ player.last_name }}</h1>
 		<h4>Shirt Size: {{ player.shirt }}</h4>
 		<h4>email: {{ player.email }}</h4>
@@ -15,7 +15,8 @@
 		<h4>Comments: {{ player.comments }}</h4>
 		<hr>
 		<h4>Pay Status: {{ pay_status }}</h4>
-		<h4>Pay Methood: {{ pay_method }}</h4>
+		<h4>Pay Method: {{ pay_method }}</h4>
 		<hr>
-		<h4>Group Play: {{ group_play }}</hr?
+		<h4>Group Play: {{ group_play }}</hr>
+	</div>
 {% endblock %}
