--- a/register/templates/sponsors/sponsor_base.html
+++ b/register/templates/sponsors/sponsor_base.html
@@ -11,9 +11,8 @@
      </head>
      <body>
          <div class="page-header">
-             <a href="{% url 'register.views.player_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+             <a href="{% url 'register.views.sponsor_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
              <h1><a href="{% url 'home.views.index' %}">El Callejon Golf</a></h1>
-             <p>Saturday Sept 26, 2015</p>
          </div>
          <div class="content container">
             <div class="row">
