First heroku commit

--- a/register/templates/players/base.html
+++ b/register/templates/players/base.html
@@ -24,4 +24,5 @@
 		      </div>
 		  </div>
      </body>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.js"></script>
 </html>
