--- a/register/templates/home/index.html
+++ b/register/templates/home/index.html
@@ -26,4 +26,5 @@
 		      </div>
 		  </div>
      </body>
+         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.js"></script>
 </html>
